// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ModalPickerMultiple ui should render button left: Component: ModalPickerMultiple => ui => should render button left 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <ModalPickerOpener
    alignButton="left"
    displayValues={[Function]}
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
    values={
      Array [
        Object {
          "active": true,
          "email": "admin@42.nl",
          "firstName": "admin",
          "id": 42,
          "lastName": "user",
          "roles": Array [
            "ADMIN",
          ],
        },
      ]
    }
  />
  Some error
  <ModalPicker
    canSearch={true}
    closeModal={[Function]}
    isOpen={false}
    modalSaved={[Function]}
    options={[Function]}
    page={
      Object {
        "content": Array [],
        "first": true,
        "last": true,
        "number": 0,
        "numberOfElements": 0,
        "size": 0,
        "totalElements": 0,
        "totalPages": 0,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    saveButtonEnabled={true}
  >
    <Row
      className="mt-3"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <EmptyModal
          userHasSearched={false}
        />
      </Col>
    </Row>
  </ModalPicker>
</FormGroup>
`;

exports[`Component: ModalPickerMultiple ui should render button right with value: Component: ModalPickerMultiple => ui => should render button right with value 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <ModalPickerOpener
    alignButton="right"
    displayValues={[Function]}
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
    values={
      Array [
        Object {
          "active": true,
          "email": "admin@42.nl",
          "firstName": "admin",
          "id": 42,
          "lastName": "user",
          "roles": Array [
            "ADMIN",
          ],
        },
      ]
    }
  />
  Some error
  <ModalPicker
    canSearch={true}
    closeModal={[Function]}
    isOpen={false}
    modalSaved={[Function]}
    options={[Function]}
    page={
      Object {
        "content": Array [],
        "first": true,
        "last": true,
        "number": 0,
        "numberOfElements": 0,
        "size": 0,
        "totalElements": 0,
        "totalPages": 0,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    saveButtonEnabled={true}
  >
    <Row
      className="mt-3"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <EmptyModal
          userHasSearched={false}
        />
      </Col>
    </Row>
  </ModalPicker>
</FormGroup>
`;

exports[`Component: ModalPickerMultiple ui should render button right without value: Component: ModalPickerMultiple => ui => should render button right without value 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <ModalPickerOpener
    alignButton="right"
    displayValues={[Function]}
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
  />
  Some error
  <ModalPicker
    canSearch={true}
    closeModal={[Function]}
    isOpen={false}
    modalSaved={[Function]}
    options={[Function]}
    page={
      Object {
        "content": Array [],
        "first": true,
        "last": true,
        "number": 0,
        "numberOfElements": 0,
        "size": 0,
        "totalElements": 0,
        "totalPages": 0,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    saveButtonEnabled={true}
  >
    <Row
      className="mt-3"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <EmptyModal
          userHasSearched={false}
        />
      </Col>
    </Row>
  </ModalPicker>
</FormGroup>
`;

exports[`Component: ModalPickerMultiple ui should render properly without label: Component: ModalPickerMultiple => ui => should render properly without label 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <ModalPickerOpener
    displayValues={[Function]}
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
    values={
      Array [
        Object {
          "active": true,
          "email": "admin@42.nl",
          "firstName": "admin",
          "id": 42,
          "lastName": "user",
          "roles": Array [
            "ADMIN",
          ],
        },
        Object {
          "active": false,
          "email": "user@42.nl",
          "firstName": "test",
          "id": 1337,
          "lastName": "user",
          "roles": Array [
            "USER",
          ],
        },
      ]
    }
  />
  Some error
  <ModalPicker
    canSearch={true}
    closeModal={[Function]}
    isOpen={false}
    modalSaved={[Function]}
    options={[Function]}
    page={
      Object {
        "content": Array [],
        "first": true,
        "last": true,
        "number": 0,
        "numberOfElements": 0,
        "size": 0,
        "totalElements": 0,
        "totalPages": 0,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    saveButtonEnabled={true}
  >
    <Row
      className="mt-3"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <EmptyModal
          userHasSearched={false}
        />
      </Col>
    </Row>
  </ModalPicker>
</FormGroup>
`;

exports[`Component: ModalPickerMultiple ui should render: Component: ModalPickerMultiple => ui => should render 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <ModalPickerOpener
    displayValues={[Function]}
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
    values={
      Array [
        Object {
          "active": true,
          "email": "admin@42.nl",
          "firstName": "admin",
          "id": 42,
          "lastName": "user",
          "roles": Array [
            "ADMIN",
          ],
        },
        Object {
          "active": false,
          "email": "user@42.nl",
          "firstName": "test",
          "id": 1337,
          "lastName": "user",
          "roles": Array [
            "USER",
          ],
        },
      ]
    }
  />
  Some error
  <ModalPicker
    canSearch={true}
    closeModal={[Function]}
    isOpen={false}
    modalSaved={[Function]}
    options={[Function]}
    page={
      Object {
        "content": Array [],
        "first": true,
        "last": true,
        "number": 0,
        "numberOfElements": 0,
        "size": 0,
        "totalElements": 0,
        "totalPages": 0,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    saveButtonEnabled={true}
  >
    <Row
      className="mt-3"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <EmptyModal
          userHasSearched={false}
        />
      </Col>
    </Row>
  </ModalPicker>
</FormGroup>
`;

exports[`Component: ModalPickerMultiple ui should use custom display function to render values: Component: ModalPickerMultiple => ui => should use custom display function to render values 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <ModalPickerOpener
    displayValues={[Function]}
    label="Select your best friend"
    onClear={[Function]}
    openModal={[Function]}
    values={
      Array [
        Object {
          "active": true,
          "email": "admin@42.nl",
          "firstName": "admin",
          "id": 42,
          "lastName": "user",
          "roles": Array [
            "ADMIN",
          ],
        },
      ]
    }
  />
  Some error
  <ModalPicker
    canSearch={true}
    closeModal={[Function]}
    isOpen={false}
    modalSaved={[Function]}
    options={[Function]}
    page={
      Object {
        "content": Array [],
        "first": true,
        "last": true,
        "number": 0,
        "numberOfElements": 0,
        "size": 0,
        "totalElements": 0,
        "totalPages": 0,
      }
    }
    pageChanged={[Function]}
    placeholder="Select your best friend"
    query=""
    saveButtonEnabled={true}
  >
    <Row
      className="mt-3"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <EmptyModal
          userHasSearched={false}
        />
      </Col>
    </Row>
  </ModalPicker>
</FormGroup>
`;
